chore: docs for new handlers added
